# pando

./: .gitignore  CMakeLists.txt  README.md
cmake/: pando_version.h.in
docs/: PANDO-CQL.md  PANDO.md
src/api/: index_api.h  program_api.cpp  query_json.cpp  query_json.h
src/cli/: index_main.cpp  query_main.cpp  server_main.cpp
src/core/: mmap_file.cpp  types.h
src/corpus/: builder.cpp  builder.h  corpus.cpp  corpus.h  streaming_builder.cpp  streaming_builder.h
src/index/: dep_jsonl_alignment_test.cpp  dependency_index.cpp  dependency_index.h  lexicon.cpp  lexicon.h  mv_fwd_test.cpp  mv_stage1_executor_test.cpp  positional_attr.cpp  positional_attr.h  structural_attr.cpp  structural_attr.h
src/query/: ast.h  executor.cpp  executor.h  executor_aggregate.cpp  executor_tabulate.cpp  lexer.cpp  lexer.h  parser.cpp  parser_quoted_test.cpp
src/query/dialect/cwb/: cwb_dialect_test.cpp  cwb_parser.cpp
src/query/dialect/pmltq/: pmltq_test_lower.cpp
test/data/: sample.conllu
wiki/: Aligned-Corpora-and-Parallel-Queries.md  CLI-Reference.md  Collocations-and-Keyness.md  Constituency-and-Nested-Regions.md  Contributing.md  Dependency-Queries.md  Home.md  Index-and-Corpus-Layout.md  Installation.md  Multivalue-Attributes.md  Overlapping-and-Nested-Regions.md  PANDO-CQL.md  Query-Language-and-CQL.md  Quick-Start.md  README.md  Sample-Corpora.md  TEITOK-Integration.md
